[package]
name = "dmls"
version = "0.1.0"
edition = "2024"
description = "DMLS command-line agent."
categories = ["cryptography"]
keywords = ["mls", "rfc9420", "e2ee"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/josephlukefahr/dmls"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
openmls = { path = "../openmls/openmls" }
openmls_rust_crypto = { path = "../openmls/openmls_rust_crypto" }
openmls_traits = { path = "../openmls/traits" }
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_with = {version = "3.14", features = ["base64"] }
tls_codec = "0.4"

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_docs = "warn"
rust_2021_compatibility = "warn"
unused = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
cargo = "warn"
